<?xml version="1.0"?>
<package format="2">
  <name>pluto_camera_stream</name>
  <version>0.0.0</version>
  <description>The pluto_camera_stream package</description>
   <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
